--- a/app/src/main/res/layout/sign_up_screen.xml
+++ b/app/src/main/res/layout/sign_up_screen.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="289dp"
-        android:layout_height="122dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="299dp"
+        android:layout_height="91dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/tt" />
@@ -147,6 +147,8 @@
 
 
 
+
+
     ]]>
 
     <TextView
@@ -161,7 +163,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/userTypeSpinner"
         app:layout_constraintEnd_toStartOf="@+id/userTypeSpinner"
         app:layout_constraintTop_toTopOf="@+id/userTypeSpinner"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/userTypeSpinner"
@@ -183,14 +185,15 @@
         android:id="@+id/buttonSignUpScreen"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/color12"
+        android:fontFamily="cursive"
         android:text="@string/sign_up_inscription"
         android:textColor="@color/color10"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:fontFamily="cursive"
         android:textSize="20dp"
-        android:background="@color/color12"
+        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
