--- a/app/src/main/res/layout/sign_in_screen.xml
+++ b/app/src/main/res/layout/sign_in_screen.xml
@@ -126,11 +126,10 @@
         android:id="@+id/textViewSignUpMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:textSize="15dp"
+        android:layout_marginTop="20dp"
         android:textColor="@color/button_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/case3" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
