--- a/app/src/main/res/layout/club_sportif_profil.xml
+++ b/app/src/main/res/layout/club_sportif_profil.xml
@@ -193,7 +193,7 @@
         android:layout_width="300dp"
         android:layout_height="400dp"
         app:cardElevation="20dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
