--- a/app/src/main/res/layout/sign_up_screen.xml
+++ b/app/src/main/res/layout/sign_up_screen.xml
@@ -6,128 +6,189 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewInscription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/sign_up_inscription"
+        android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:text="@string/sign_up_email"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
-        app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
-        app:layout_constraintTop_toTopOf="@+id/editTextEmail" />
+    <com.google.android.material.textfield.TextInputLayout
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="200dp"
+        android:id="@+id/case1"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
         android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_nom"
-        android:layout_marginRight="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextNom"
-        app:layout_constraintEnd_toStartOf="@+id/editTextNom"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewInscription">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextNom"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/case2"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
         android:layout_marginTop="20dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/case1"
+        android:backgroundTint="@color/black"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_prenom"
-        android:layout_marginRight="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextPrenom"
-        app:layout_constraintEnd_toStartOf="@+id/editTextPrenom"
-        app:layout_constraintTop_toTopOf="@+id/editTextPrenom" />
+        >
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextPrenom"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextNom"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Nom"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/case3"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNom" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_password"
-        android:layout_marginRight="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
-        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
-        app:layout_constraintTop_toTopOf="@+id/editTextPassword" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="200dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPrenom" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_confirm_password"
-        android:layout_marginRight="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextConfirmPassword"
-        app:layout_constraintEnd_toStartOf="@+id/editTextConfirmPassword"
-        app:layout_constraintTop_toTopOf="@+id/editTextConfirmPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/case2">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextConfirmPassword"
-        android:layout_width="200dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextPrenom"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Prenom"
+            android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/case4"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="24dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/case3"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/black">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Entrer votre mot de passe"
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/case5"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="24dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/case4"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/black">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Confirmation mot passe"
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+
+    </com.google.android.material.textfield.TextInputLayout><![CDATA[" />
+
+
+
+
+
+
+
+    ]]>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:text="@string/sign_up_user_type"
-        android:layout_marginRight="20dp"
+
+        android:textColor="@color/black"
+        android:textSize="25dp"
+
         app:layout_constraintBottom_toBottomOf="@+id/userTypeSpinner"
         app:layout_constraintEnd_toStartOf="@+id/userTypeSpinner"
-        app:layout_constraintTop_toTopOf="@+id/userTypeSpinner" />
+        app:layout_constraintTop_toTopOf="@+id/userTypeSpinner"
+        app:layout_constraintVertical_bias="0.0" />
+
     <Spinner
         android:id="@+id/userTypeSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="50dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="12dp"
+        android:descendantFocusability="blocksDescendants"
+        android:outlineAmbientShadowColor="@color/black"
+        android:spinnerMode="dropdown"
+        android:backgroundTint="@color/black"
+        android:pointerIcon="text"
+
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/case5" />
+
     <Button
         android:id="@+id/buttonSignUpScreen"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/sign_up_inscription"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
